--- a/index.html
+++ b/index.html
@@ -9,23 +9,23 @@
 </head>
 
 <body>
-    <header>
-        <nav>
-            <h1>Dictionary App</h1>
-        </nav>
-    </header>
     <main>
+        <header>
+            <nav>
+                <h1>Dictionary App</h1>
+            </nav>
+        </header>
         <form action="">
-            <input type="text" placeholder="enter a word">
+            <input type="text" placeholder="Enter a word">
             <button type="submit">Search</button>
         </form>
         <div class="result">
-
+            <!-- Results will appear here -->
         </div>
+        <footer>
+            <p>&copy; dictionaryapp.com 2024-25</p>
+        </footer>
     </main>
-    <footer>
-        <p>&copy; dictionaryapp.com 2024-25</p>
-    </footer>
     <script src="script.js"></script>
 </body>
 
